<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:alpha="0.6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_west_24"
                    android:contentDescription="@string/back" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_details"
                    android:textColor="@color/light_blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/highlight_text"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/block"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tv_block"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="@dimen/oversize_text"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/block_hash"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tv_block_hash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/previous_block_hash"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tv_previous_block_hash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/white"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="30dp"
                        android:background="@drawable/top_left_corner_dark_blue">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/transactions"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_transactions"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:gravity="center_vertical"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/size_kb"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_size"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/weight_kwu"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_weight"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/blockStatus"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_status"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_version"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/merkle_root"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_merkle_root"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/bits"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_bits"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/difficulty"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_difficulty"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:weightSum="10">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/nonce"
                                android:textColor="@color/light_blue"
                                android:textStyle="bold"
                                android:layout_weight="4"/>
                            <TextView
                                android:id="@+id/tv_nonce"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:gravity="end"
                                android:layout_weight="6"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/transactions"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textAllCaps="true" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginTop="5dp"
                                android:background="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:nestedScrollingEnabled="false"
                        android:paddingHorizontal="15dp"
                        android:background="@color/white">
                    </androidx.recyclerview.widget.RecyclerView>
                    <ProgressBar
                        android:id="@+id/pb_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/gray"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <include layout="@layout/scroll_to_the_top_floating_action_button"/>
</RelativeLayout>